--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,18 @@
 <html>
+
 <head>
-    <title>Barebones Typescript/React/Express</title>
+    <title>The Ultimate Blog of Truth and Wisdom</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="images/site.webmanifest">
+    <link rel="shortcut icon" type= "image/png" href="images/favicon.png">
+
+
 </head>
+
 <body>
     <noscript>
         You need to enable JavaScript to run this app.
@@ -11,4 +20,5 @@
     <div id="root"></div>
     <script src="/js/app.js"></script>
 </body>
+
 </html>
